[project]
name = "griptape-nodes-library-maps"
version = "0.1.0"
description = "Google Maps integration nodes for Griptape"
authors = [
    {name = "Griptape Team", email = "team@griptape.ai"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
